--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,23 +11,26 @@ main:
   - title: "Publications"
     url: /publications/
 
+  - title: "Other Projects"
+    url: /portfolio/
+
+  - title: "Awards"
+    url: /awards/
+
   - title: "Talks"
     url: /talks/    
 
   - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
+    url: /teaching/
+
+  - title: "Resume"
+    url: /resume/
+
   - title: "CV"
     url: /cv/
     
   # - title: "CV"
   #   url: /cv-json/
     
-  - title: "Guide"
-    url: /markdown/
+  # - title: "Guide"
+  #  url: /markdown/
