--- a/_config.yml
+++ b/_config.yml
@@ -91,6 +91,13 @@ publication_category:
     title: 'Journal Articles'    
   conferences:
     title: 'Conference Papers'
+    
+# Talk Category - The following the list of talk categories and their headings
+talk_category:
+  posters:
+    title: 'Posters'
+  talks:
+    title: 'Talks'    
 
 # Site Settings
 teaser                   :  # filename of teaser fallback teaser image placed in /images/ for social media previews
