possibly fixing image spacing

--- a/_config.yml
+++ b/_config.yml
@@ -91,6 +91,10 @@ publication_category:
     title: 'Journal Articles'    
   conferences:
     title: 'Conference Papers'
+  datasets:
+    title: 'Datasets'
+  blog:
+    title: 'Blog Articles'
     
 # Talk Category - The following the list of talk categories and their headings
 talk_category:
